# mandelbrot

./: .gitignore  CMakeLists.txt  README.md
data/shaders/: mandelbrot.frag  mandelbrot.vert  mesh.vert  posuv.vert  shape2d.vert  shape3d.vert  ssaa.frag  ssaa.vert  ssaa4s.frag  text.frag  text.vert  uvmap.frag
src/: main.cpp
